--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,10 @@ header nav {
 .service,
 .contact,
 .notice,
-.safety {
+.safety,
+.Project-Work,
+.ClientSlider,
+.Team {
     background-color: #f2f2fc;
 }
 .product img {
@@ -159,9 +162,9 @@ header nav {
     transition: all 0.3s ease;
 }
 .service .service-item .service-item-inner .icon {
-    /* width: 60px; */
-    height: 60px;
-    border-radius: 50%;
+    width: 200px;
+    height: 120px;
+    /* border-radius: 50%; */
     /* background-color: red; */
     display: block;
     margin: 0 auto 30px;
@@ -171,13 +174,15 @@ header nav {
     transition: all 0.3s ease;
 }
 .service .service-item .service-item-inner .icon img {
-    width: 100px;
-    height: 90px;
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    border: 4px solid #ec1839;
 }
 .service .service-item .service-item-inner h4 {
     font-size: 18px;
     margin-bottom: 15px;
-    color: #302e4d;
+    color: #ec1839;
     font-weight: 700;
     text-transform: capitalize;
 }
@@ -207,7 +212,7 @@ header nav {
 .safety .service-item .service-item-inner {
     width: 100%;
     background-color: #fdf9ff;
-    border: 4px solid #ec1839;
+    border: 1px solid #d4d4e3;
     border-radius: 10px;
     padding: 30px 15px;
     text-align: center;
@@ -215,9 +220,9 @@ header nav {
     transition: all 0.3s ease;
 }
 .safety .service-item .service-item-inner .icon {
-    /* width: 60px; */
-    height: 60px;
-    border-radius: 50%;
+    width: 200px;
+    height: 120px;
+    /* border-radius: 50%; */
     /* background-color: red; */
     display: block;
     margin: 0 auto 30px;
@@ -227,8 +232,10 @@ header nav {
     transition: all 0.3s ease;
 }
 .safety .service-item .service-item-inner .icon img {
-    width: 100px;
-    height: 90px;
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    border: 4px solid #ec1839;
 }
 .safety .service-item .service-item-inner h4 {
     font-size: 18px;
@@ -245,6 +252,25 @@ header nav {
     transition: all 0.3s ease;
 }
 /* Safety Section End */
+/* Project Work Start */
+.Project-Work {
+	padding: 50px 0;
+}
+.Project-Work .Morethan {
+    font-size: 25px;
+    margin-bottom: 50px;
+    font-weight: 700;
+}
+.Project-Work h1 {
+	font-size: 2rem;
+	text-align: center;
+    font-weight: bold;
+    color: #ec1839;
+}
+.ab {
+    display: block;
+}
+/* End */
 /* Contact Start */
 .contact .service-item {
     -ms-flex: 0 0 50%;
@@ -501,6 +527,126 @@ footer ul li a {
     font-size: 16px;
 }
 /* Footer Css End */
+/* Client Section Start */
+.ClientSlider {
+    padding: 50px 0 100px 0;
+}
+.ClientSlider img {
+    width: 170px !important;
+    height: 170px;
+    margin: 40px auto 0;
+    border-radius: 50%;
+    border: 3px solid #fff;
+}
+.ClientSlider .carousel-item {
+    background: #f2f2fc;
+}
+.ClientSlider .abc {
+    width: auto !important;
+    height: 400px;
+    background-color: #fff;;
+}
+.ClientSlider .carousel-item h3{
+    color: #000;
+    font-weight: bold;
+    text-transform: capitalize;
+    font-size: 20px;
+    margin: 0px 10px 15px 10px;
+}
+.ClientSlider .carousel-item p {
+    color: rgba(0,0,0,.5);
+    font-weight: 500;
+    font-size: 16px;
+}
+.ClientSlider .checked {
+    color: orange !important;
+}
+.ClientSlider .fa {
+    color: #000;
+}
+.ClientSlider .carousel-control-prev,
+.ClientSlider .carousel-control-next {
+    display: none;
+}
+.ClientSlider .carousel-indicators {
+    bottom: -60px;
+}
+.ClientSlider .carousel-indicators li {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+}
+/* Client Section End */
+/* Team Section Start */
+.Team {
+    padding-bottom: 100px;
+}
+.Team .row {
+    background: #ec1839;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.Team .col {
+    flex-basis: 25%;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+    padding: 0;
+}
+.Team .col img {
+    width: 100%;
+    cursor: pointer;
+    transition: 1s;
+}
+.Team .col:hover img {
+    transform: scale(1.1);
+}
+.Team .col p {
+    margin: 20px 0;
+    color: #fff;
+}
+.Team h3 {
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+}
+.Team .social-links .fa {
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    border: 1px solid #fff;
+    margin: 0 7px;
+    cursor: pointer;
+    color: #fff;
+    /*border-radius: 5px;*/
+    transition: transform .5s;
+}
+.Team .social-links .fa:hover {
+    background: #fff;
+    color: #ec1839;
+    transform: translateY(-7px);
+}
+.Team .col span {
+    width: 0;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-right: 15px solid #ec1839;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    z-index: 2;
+}
+.Team .col .arrow4 {
+    right: unset;
+    left: 0;
+    border-left: 15px solid #ec1839;
+    border-right: 15px solid transparent;
+}
+/* Team Section End */
 /* Mobile Menu Start */
 .Mob {
     position: fixed;
@@ -578,6 +724,9 @@ footer ul li a {
 }
 .Mob input:checked ~ nav ul .nav-item:nth-child(5) {
     transition-delay: .9s;
+}
+.Mob input:checked ~ nav ul .nav-item:nth-child(6) {
+    transition-delay: 1s;
     border-bottom-left-radius: 10px;
 }
 .Mob input:checked ~ nav ul .nav-item {
@@ -638,6 +787,45 @@ footer ul li a {
     }
     .Mob nav {
         display: block;
+    }
+    .Project-Work {
+        padding: 0;
+    }
+    .Team .row {
+        width: 100%;
+    }
+    .Team .col {
+        flex-basis: 50%;
+        font-size: 14px;
+    }
+    .Team .social-links .fa {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    }
+    .Team .row .col:nth-child(1) {
+        order: 1;
+    }
+    .Team .row .col:nth-child(2) {
+        order: 2;
+    }
+    .Team .row .col:nth-child(3) {
+        order: 5;
+    }
+    .Team .row .col:nth-child(4) {
+        order: 6;
+    }
+    .Team .row .col:nth-child(5) {
+        order: 3;
+    }
+    .Team .row .col:nth-child(6) {
+        order: 4;
+    }
+    .Team .row .col:nth-child(7) {
+        order: 7;
+    }
+    .Team .row .col:nth-child(8) {
+        order: 8;
     }
 }
 /* Media Query End */
